--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "leaflet": "^1.9.4",
+    "mongoose": "^8.4.0",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
