create authentication helper functions

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URL= "mongodb://localhost:27017/Set-Coffee";
-privateKey="lkhadslkgfgfaskldjgfiudfhlisa";
+MONGO_URL= "mongodb://localhost:27017/Set-Coffee"
+AccessTokenPrivateKey=lkhadslkgfgfaskldjgfiudfhlisa
+RefreshTokenPrivateKey=ashfkjadgfubdsaklfjgagfkjadsg
